--- a/main.html
+++ b/main.html
@@ -7,26 +7,22 @@
 <body>
 <header>
 <div class="editor">
-  <a class="logo">
-    Copilot web by Zewsic & fr0an
-  </a>
-  <ol contenteditable="true">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ol>
-    <div class="actions">
-    <select>
-      <option value=”py”>Python</option>
-      <option value=”js”>JS</option>
-      <option value=”C”>C</option>
-      <option value=”HTML”>HTML</option>
-      <option value=”Java”>Java</option>
-    </select><input type="button" value="Extend!" class="extend_btn">
-  </div>
- </div>
+<a class="logo">
+Copilot WEB by Zewsic & fr0an
+</a>
+<ol>
+<li><div class="usercode" contenteditable="true"></li>
+</ol>
+<div class="actions">
+<select>
+<option value=”py”>Python</option>
+<option value=”js”>JS</option>
+<option value=”C”>C</option>
+<option value=”HTML”>HTML</option>
+<option value=”Java”>Java</option>
+</select><input type="button" value="Extend!" class="extend_btn">
+</div>
+</div>
 </header>
 </body>
 </html>
